# Physical-AI-Book-Course

./: .gitignore  CLAUDE.md
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
backend/: .dockerignore  .env  .railwayignore  Dockerfile  Dockerfile.railway  README.md  app.py  check_models_new.py  main.py  pyproject.toml  railway.json  render.yaml  requirements-hf.txt  requirements-railway.txt  requirements-render.txt  requirements.txt
backend/src/: config.py
backend/src/api/v1/: chat.py
backend/src/middleware/: rate_limit.py
backend/src/models/: query.py  response.py  retrieved_chunk.py
backend/src/scripts/: index_book_content.py
backend/src/services/: gemini_service.py  qdrant_service.py  rag_service.py
backend/src/utils/: chunking_util.py  google_embedding_util.py  sentence_transformer_embedding.py
docs/: chatbot-implementation-summary.md
frontend/: README.md  package.json
frontend/src/: config.js  index.js
frontend/src/components/: ChatbotWidget.css  ChatbotWidget.js
frontend/src/services/: api.js
frontend/tests/: chatbot.test.js
specs/001-book-website-docusaurus/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-physical-ai-book/: spec.md
specs/002-rag-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
website/: .gitignore  README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
website/docs/: chatbot-configuration.md  intro.md  responsiveness-improvements.md  toc.md
(+100 files in other folders)
